--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- reset.css ress -->
+<link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
 </head>
 <body>
   <app-root></app-root>
